; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/fsl/extr_imx-ssi.c_imx_ssi_ac97_reset.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/fsl/extr_imx-ssi.c_imx_ssi_ac97_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_ssi = type { i32 (%struct.snd_ac97*)* }
%struct.snd_ac97 = type { i32 }

@ac97_ssi = common dso_local global %struct.imx_ssi* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ac97*)* @imx_ssi_ac97_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx_ssi_ac97_reset(%struct.snd_ac97* %0) #0 {
  %2 = alloca %struct.snd_ac97*, align 8
  %3 = alloca %struct.imx_ssi*, align 8
  store %struct.snd_ac97* %0, %struct.snd_ac97** %2, align 8
  %4 = load %struct.imx_ssi*, %struct.imx_ssi** @ac97_ssi, align 8
  store %struct.imx_ssi* %4, %struct.imx_ssi** %3, align 8
  %5 = load %struct.imx_ssi*, %struct.imx_ssi** %3, align 8
  %6 = getelementptr inbounds %struct.imx_ssi, %struct.imx_ssi* %5, i32 0, i32 0
  %7 = load i32 (%struct.snd_ac97*)*, i32 (%struct.snd_ac97*)** %6, align 8
  %8 = icmp ne i32 (%struct.snd_ac97*)* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.imx_ssi*, %struct.imx_ssi** %3, align 8
  %11 = getelementptr inbounds %struct.imx_ssi, %struct.imx_ssi* %10, i32 0, i32 0
  %12 = load i32 (%struct.snd_ac97*)*, i32 (%struct.snd_ac97*)** %11, align 8
  %13 = load %struct.snd_ac97*, %struct.snd_ac97** %2, align 8
  %14 = call i32 %12(%struct.snd_ac97* %13)
  br label %15

15:                                               ; preds = %9, %1
  %16 = load %struct.snd_ac97*, %struct.snd_ac97** %2, align 8
  %17 = call i32 @imx_ssi_ac97_read(%struct.snd_ac97* %16, i32 0)
  ret void
}

declare dso_local i32 @imx_ssi_ac97_read(%struct.snd_ac97*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
